--- a/data/Facturacion-db.properties
+++ b/data/Facturacion-db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.3
-#Mon Nov 03 18:07:02 CST 2025
+#Mon Nov 03 21:35:37 CST 2025
 tx_timestamp=37
-modified=no
+modified=yes
 version=2.7.3
